--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 body {
     background-color: transparent;
-    background-image: url(https://images.creativemarket.com/0.1.0/ps/4648287/910/1214/m2/fpnw/wm1/minlajjev6itkaiuxzejul6zh37nigl35tbs9qmqwhqisugcspk6tfcxzyzwqlpy-.jpg?1529747059&s=4878e25ade33df1b640b4a57258c7f10);
+    background-image: url(assets/background.jpg);
     background-size: cover;
     font-family: 'Montserrat', sans-serif;
 }
 
 .navbar {
-    background-color: #363030;    
+    background-color: #363030;
+    color: whitesmoke;    
 }
 
 .navbar-brand,
@@ -23,6 +24,7 @@ body {
     color: whitesmoke;
     margin: 10%;
     margin-top: 10%;
+    border-radius: 15px 50px 30px 5px;
 }
 
 .card {
@@ -32,6 +34,7 @@ body {
 .title {
     font-size: 70px;
     text-align: center;
+    text-shadow: 1px 1px 10px #fff, 2px 2px 10px rgb(248, 247, 247);
 }
 
 #textbox {
@@ -46,34 +49,33 @@ body {
     background-color: #363030;
     color: whitesmoke;
     margin: 0px auto;
+    border-radius: 50px;
+    padding: 2%;
 
 }
 
-#row3 {
-    width: 80%;
-    padding: 2%;
-    margin: 0% auto;
-    margin-bottom: 5%;
+
+#popular {
     background-color: #363030;
     color: whitesmoke;
     text-align: center;
-}
-
-#popular {
-    margin: 0px auto;
-    background-color: #363030;
+    padding: 10%;
+    border-radius: 15px 50px 30px;    
 
 }
 
 #row2 {
     margin: 0% auto;
-    width: 80%;
+    margin-bottom: 1%;
+    width: 98%;
     background-color: transparent;
+    text-align: center;
 }
 
 #gif1 {
     margin-top: 0%;
     align-items: center;
+    
 
 }
 
