nav bar active, gifs side by side!

--- a/style.css
+++ b/style.css
@@ -64,6 +64,13 @@ body {
 
 }
 
+#gifs {
+    width: auto;
+    height: auto;
+    float: left;
+    margin-left: 10%;
+}
+
 #row2 {
     margin: 0% auto;
     margin-bottom: 1%;
