--- a/style.css
+++ b/style.css
@@ -80,30 +80,36 @@ body {
 }
 
 
-.ourinfo {
-    margin: 0%;   
-
+#ourinfo {   
+    
+    margin: 0% auto;
+    align-content: center;
+    
 }
 
 a {
     color: whitesmoke;
 }
 
-#us {
-    width: auto;
-    height: auto;    
+#ourcards{
+    margin: 0% auto;
+}
+
+#us {          
     text-align: center;
     font-size: 20px;
     background-color: #363030;
     color: whitesmoke;
     margin: 5%;
-    padding: 2%;
-    border-radius: 15px 50px 30px 5px;
-    float: left;
-    
-    
-
+    padding: 5%;
+    border-radius: 15px 50px 30px 5px;      
 }
+
+ul {
+    color: #363030;
+}
+
+
 
 .footer {
 
