--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
     text-align: center;
     font-size: 20px;
     background-color: #363030;
+    
     color: whitesmoke;
     margin: 10%;
     margin-top: 10%;
@@ -45,7 +46,7 @@ body {
 #aboutcard{
     width: 80%;
     font-size: 20px;
-    text-align: center;
+    /* text-align: center; */
     background-color: #363030;
     color: whitesmoke;
     margin: 0px auto;
@@ -109,7 +110,25 @@ ul {
     color: #363030;
 }
 
+.move-left {
+    width: auto;
+    box-shadow: none;
+  }
 
+
+
+.search-results {
+    width: 100%;
+    font-size: 20px;
+    text-align: center;
+    background-color: #363030;
+    opacity: 0.8;
+    color: whitesmoke;
+    margin: 0px auto;
+    border-radius: 50px;
+    padding: 2%;
+    /* float: right; */
+}
 
 .footer {
 
@@ -124,3 +143,4 @@ ul {
 a:hover {
     color: #00FFF6;
 }
+
