--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
     text-align: center;
     font-size: 20px;
     background-color: #363030;
-    
+    opacity: 0.8;
     color: whitesmoke;
     margin: 10%;
     margin-top: 10%;
@@ -46,7 +46,7 @@ body {
 #aboutcard{
     width: 80%;
     font-size: 20px;
-    /* text-align: center; */
+    text-align: center;
     background-color: #363030;
     color: whitesmoke;
     margin: 0px auto;
