--- a/style.css
+++ b/style.css
@@ -3,11 +3,13 @@ body {
     background-image: url(assets/background.jpg);
     background-size: cover;
     font-family: 'Montserrat', sans-serif;
+    cursor: url(assets/Mushroom\ 1.cur), auto;
 }
 
 .navbar {
-    background-color: #363030;
-    color: whitesmoke;    
+    background-color: #272f34;
+    color: whitesmoke; 
+    letter-spacing: 2px;   
 }
 
 .navbar-brand,
@@ -15,7 +17,7 @@ body {
     color: whitesmoke;
 }
 
-.search-card {
+#random {
     height: auto;
     width: auto;
     text-align: center;
@@ -23,18 +25,20 @@ body {
     background-color: #363030;
     color: whitesmoke;
     margin: 10%;
-    margin-top: 10%;
+    padding: 10%;
     border-radius: 15px 50px 30px;
+    opacity: 0.92;
 }
 
 .card {
-    background-color: transparent;    
+    background-color:transparent;    
 }
 
 .title {
     font-size: 70px;
     text-align: center;
-    text-shadow: 1px 1px 10px #fff, 2px 2px 10px rgb(248, 247, 247);
+    text-shadow: 2px 2px 20px #faf7f6, 2px 2px 20px rgb(248, 247, 247);
+    font-weight: 500;
 }
 
 #textbox {
@@ -51,22 +55,18 @@ body {
     margin: 0px auto;
     border-radius: 50px;
     padding: 2%;
-
-}
-
-#recipe {
-    float: left;
-    margin-left: 3%;
-    margin-top: -20%;
+    opacity: .92;
 }
 
 
-#popular {
+.weather-card {
     background-color: #363030;
     color: whitesmoke;
     text-align: center;
-    padding: 5%;
-    border-radius: 15px 50px 30px;    
+    padding: 10%;
+    margin-left: 10%;
+    border-radius: 15px 50px 30px;
+    opacity: 0.92;
 
 }
 
@@ -79,10 +79,7 @@ body {
 }
 
 #row2 {
-    margin: 0% auto;
-    width: auto;
-    background-color: transparent;
-    text-align: center;
+    margin: 2% auto;   
 }
 
 
@@ -94,21 +91,25 @@ body {
 }
 
 a {
-    color: whitesmoke;
+    color: #849f82;
+    font-size: x-large;
+    font-weight: 500;    
 }
 
 #ourcards{
     margin: 0% auto;
+    width: auto;    
 }
 
 #us {          
     text-align: center;
     font-size: 20px;
-    background-color: #363030;
+    background-color: #404a4a;
     color: whitesmoke;
     margin: 5%;
     padding: 5%;
-    border-radius: 15px 50px 30px 5px;      
+    border-radius: 15px 50px 30px;
+    opacity: 0.92; 
 }
 
 ul {
@@ -120,13 +121,14 @@ ul {
 .footer {
 
     text-align: center;
-    background-color: #363030;
-    color: whitesmoke;
+    background-color:#272f34;
+    color: snow;
     margin-bottom: 0px;
-    font-size: 20px;    
+    font-size: 20px; 
+    letter-spacing: 2px  
 
 }
 
 a:hover {
-    color: #00FFF6;
+    color:#b69982;
 }
