--- a/style.css
+++ b/style.css
@@ -20,15 +20,13 @@ body {
 #random {
     height: auto;
     width: auto;
-    text-align: center;
-    font-size: 20px;
+    font-size: 18px;
     background-color: #363030;
     opacity: 0.8;
     color: whitesmoke;
     margin: 10%;
     padding: 10%;
-    border-radius: 15px 50px 30px;
-    opacity: 0.92;
+    border-radius: 15px 50px 30px;    
 }
 
 .card {
@@ -47,8 +45,7 @@ body {
 }
 
 
-#aboutcard{
-    width: 80%;
+#aboutcard{    
     font-size: 20px;
     text-align: center;
     background-color: #363030;
@@ -56,7 +53,7 @@ body {
     margin: 0px auto;
     border-radius: 50px;
     padding: 2%;
-    opacity: .92;
+    opacity: .8;
 }
 
 
@@ -67,7 +64,7 @@ body {
     padding: 10%;
     margin-left: 10%;
     border-radius: 15px 50px 30px;
-    opacity: 0.92;
+    opacity: 0.8;
 
 }
 
@@ -110,7 +107,7 @@ a {
     margin: 5%;
     padding: 5%;
     border-radius: 15px 50px 30px;
-    opacity: 0.92; 
+    opacity: 0.8; 
 }
 
 ul {
@@ -168,7 +165,8 @@ ul {
     color: snow;
     margin-bottom: 0px;
     font-size: 20px; 
-    letter-spacing: 2px  
+    letter-spacing: 2px; 
+    opacity: .8; 
 
 }
 
