--- a/style.css
+++ b/style.css
@@ -40,9 +40,6 @@ body {
     font-weight: 500;
 }
 
-#textbox {
-    padding: 2%;
-}
 
 
 #aboutcard{    
@@ -50,10 +47,11 @@ body {
     text-align: center;
     background-color: #363030;
     color: whitesmoke;
-    margin: 0px auto;
+    margin: 10px;
+    margin-right: 20px;
     border-radius: 50px;
     padding: 2%;
-    opacity: .8;
+    opacity: .92;
 }
 
 
@@ -99,7 +97,8 @@ a {
     width: auto;    
 }
 
-#us {          
+#us {   
+    height: auto;       
     text-align: center;
     font-size: 20px;
     background-color: #404a4a;
@@ -107,7 +106,7 @@ a {
     margin: 5%;
     padding: 5%;
     border-radius: 15px 50px 30px;
-    opacity: 0.8; 
+    opacity: 0.92; 
 }
 
 ul {
