--- a/style.css
+++ b/style.css
@@ -20,13 +20,13 @@ body {
 #random {
     height: auto;
     width: auto;
-    font-size: 18px;
-    background-color: #363030;
-    opacity: 0.8;
+    font-size: 20px;
+    background-color:  #404a4a;
+    opacity: 0.92;
     color: whitesmoke;
     margin: 10%;
-    padding: 10%;
-    border-radius: 15px 50px 30px;    
+    padding: 5%;
+    border-radius: 15px 50px 30px;        
 }
 
 .card {
@@ -45,9 +45,9 @@ body {
 #aboutcard{    
     font-size: 20px;
     text-align: center;
-    background-color: #363030;
+    background-color:  #404a4a;
     color: whitesmoke;
-    margin: 10px;
+    margin: 0% auto;
     margin-right: 20px;
     border-radius: 50px;
     padding: 2%;
@@ -56,13 +56,13 @@ body {
 
 
 .weather-card {
-    background-color: #363030;
+    background-color:  #404a4a;
     color: whitesmoke;
     text-align: center;
     padding: 10%;
     margin-left: 10%;
     border-radius: 15px 50px 30px;
-    opacity: 0.8;
+    opacity: 0.92;
 
 }
 
@@ -88,7 +88,7 @@ body {
 
 a {
     color: #849f82;
-    font-size: x-large;
+    font-size: large;
     font-weight: 500;    
 }
 
@@ -110,7 +110,7 @@ a {
 }
 
 ul {
-    color: #363030;
+    color:  #404a4a;
 }
 
 .conversions {
@@ -118,8 +118,8 @@ ul {
     width: auto;
     text-align: center;
     font-size: 20px;
-    background-color: #363030;
-    opacity: 0.8;
+    background-color:  #404a4a;
+    opacity: 0.92;
     color: whitesmoke;
     margin: 10%;
     margin-top: 10%;
@@ -131,8 +131,8 @@ ul {
     width: auto;
     text-align: center;
     font-size: 20px;
-    background-color: #363030;
-    opacity: 0.8;
+    background-color:   #404a4a;
+    opacity: 0.92;
     color: whitesmoke;
     margin: 10%;
     margin-top: 10%;
@@ -148,8 +148,8 @@ ul {
     width: 100%;
     font-size: 20px;
     text-align: center;
-    background-color: #363030;
-    opacity: 0.8;
+    background-color:  #404a4a;
+    opacity: 0.92;
     color: whitesmoke;
     margin: 0px auto;
     border-radius: 50px;
